src/test/error/imp1.lns
import test.error.imp2;
